--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "webpacktemplate",
+  "name": "leader-boards",
   "version": "1.0.0",
   "description": "",
   "private": true,
   "scripts": {
-    "start": "webpack serve --open",
+    "start": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/BahirHakimy/WebPackTemplate.git"
+    "url": "git+https://github.com/BahirHakimy/Leader-boards.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/BahirHakimy/WebPackTemplate/issues"
+    "url": "https://github.com/BahirHakimy/Leader-boards.git/issues"
   },
-  "homepage": "https://github.com/BahirHakimy/WebPackTemplate#readme",
+  "homepage": "https://github.com/BahirHakimy/Leader-boards.git#readme",
   "devDependencies": {
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.2.7",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.0.2",
+    "postcss-preset-env": "^8.0.1"
   }
 }
