Add connection to api and basic operations

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,5 +23,5 @@
     ],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
   },
-  "ignorePatterns": ["dist/", "build/"]
+  "ignorePatterns": ["dist/", "build/", "src/"]
 }
